progress made till Week 4 Problem 2

--- a/the_python_tutorial.ipynb
+++ b/the_python_tutorial.ipynb
@@ -774,6 +774,165 @@
    "source": [
     "### docs.python.org read till 4.8.3 Python 3.10.2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "833fd045",
+   "metadata": {},
+   "source": [
+    "## 8. Errors & Functions\n",
+    "### 8.3 Handling Exceptions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c5ce1db9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c332812e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Volume in drive E has no label.\n",
+      " Volume Serial Number is D4FF-FD4F\n",
+      "\n",
+      " Directory of e:\\shreyastaware\\python_projects\\problem-solving\n",
+      "\n",
+      "26-03-2022  18:38    <DIR>          .\n",
+      "26-03-2022  18:38    <DIR>          ..\n",
+      "18-03-2022  02:06               530 ..gitignore.un~\n",
+      "18-03-2022  02:06             2,918 .gitignore\n",
+      "18-03-2022  00:11             2,914 .gitignore~\n",
+      "25-03-2022  23:28    <DIR>          .ipynb_checkpoints\n",
+      "18-03-2022  00:21               985 .README.md.un~\n",
+      "21-03-2022  15:29    <DIR>          .vscode\n",
+      "18-03-2022  23:22               927 counting_sort_1.py\n",
+      "18-03-2022  23:26             1,330 counting_sort_1_soln.py\n",
+      "19-03-2022  00:30             1,901 counting_valleys.py\n",
+      "19-03-2022  00:36             1,163 counting_valleys_1.py\n",
+      "22-03-2022  23:14    <DIR>          cpp\n",
+      "17-03-2022  23:43             1,814 diagonal_difference.py\n",
+      "17-03-2022  23:57               701 diagonal_difference_1.py\n",
+      "17-03-2022  23:59               436 diagonal_difference_2.py\n",
+      "22-03-2022  23:11             1,685 drawing_book.py\n",
+      "22-03-2022  23:16               535 drawing_book_1.py\n",
+      "18-03-2022  02:55             2,944 envname.yml\n",
+      "25-03-2022  23:27    <DIR>          experiment_files_python\n",
+      "17-03-2022  23:38             1,134 flipping_bits.py\n",
+      "18-03-2022  12:35               368 flipping_bits_1.py\n",
+      "15-03-2022  01:59             1,496 function_annotations.py\n",
+      "17-03-2022  22:11             1,005 grading_students.py\n",
+      "25-03-2022  10:49    <DIR>          java\n",
+      "18-03-2022  00:01    <DIR>          js\n",
+      "17-03-2022  22:02             2,211 lonely_integer.py\n",
+      "19-03-2022  01:41             1,085 mars_exploration.py\n",
+      "19-03-2022  01:42               641 mars_exploration_1.py\n",
+      "19-03-2022  01:42               175 mars_exploration_2.py\n",
+      "21-03-2022  17:56             3,232 maximum_perimeter_triangle.py\n",
+      "21-03-2022  16:45             2,633 migratory_birds.py\n",
+      "21-03-2022  16:47               121 migratory_birds_1.py\n",
+      "23-03-2022  23:35             2,136 mock_test_3.py\n",
+      "19-03-2022  00:52               781 pangrams.py\n",
+      "19-03-2022  00:55               137 pangrams_1.py\n",
+      "19-03-2022  00:56               241 pangrams_2.py\n",
+      "21-03-2022  16:05             1,124 permuting_two_arrays.py\n",
+      "20-03-2022  20:17               390 permuting_two_arrays_1.py\n",
+      "25-03-2022  11:33             3,602 picking_numbers.py\n",
+      "25-03-2022  10:46               191 picking_numbers_1.py\n",
+      "25-03-2022  10:48               625 picking_numbers_2.py\n",
+      "15-03-2022  08:55            48,910 python_dsa.ipynb\n",
+      "26-03-2022  18:38            23,585 python_practice.ipynb\n",
+      "21-03-2022  15:38               384 README.md\n",
+      "18-03-2022  00:06                22 README.md~\n",
+      "19-03-2022  01:42    <DIR>          ruby\n",
+      "21-03-2022  16:13               880 sales_by_match.py\n",
+      "21-03-2022  16:33               479 sales_by_match_1.py\n",
+      "15-03-2022  17:05             1,581 sparse_arrays.py\n",
+      "21-03-2022  16:05             1,523 subarray_division_2.py\n",
+      "19-03-2022  00:40    <DIR>          swift\n",
+      "26-03-2022  21:37            20,529 the_python_tutorial.ipynb\n",
+      "21-03-2022  16:04               347 xor_string_3.py\n",
+      "22-03-2022  21:59               655 zig_zag_sequence.py\n",
+      "              45 File(s)        143,006 bytes\n",
+      "              10 Dir(s)  554,520,227,840 bytes free\n"
+     ]
+    }
+   ],
+   "source": [
+    "!dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "87f0bdbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Could not convert data to an integer.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "try:\n",
+    "    f = open('myfile.txt')\n",
+    "    s = f.readline()\n",
+    "    i = int(s.strip())\n",
+    "except OSError as err:\n",
+    "    print(\"OS error: {0}\".format(err))\n",
+    "except ValueError:\n",
+    "    print(\"Could not convert data to an integer.\")\n",
+    "except BaseException as err:\n",
+    "    print(f\"Unexpected {err=}, {type(err)=}\")\n",
+    "    raise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3b4b93f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.exc_info()[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2eec719",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -792,7 +951,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
