--- a/python_dsa.ipynb
+++ b/python_dsa.ipynb
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "ebe5abd6",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
        "       ['Sun', '13', '15', '19', '16']], dtype='<U11')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,9 @@
    "cell_type": "code",
    "execution_count": 41,
    "id": "7dacdd45",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -744,6 +746,54 @@
    ],
    "source": [
     "a[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ad0115d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1c68af73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "?np.append"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5b2339bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['Mon', '18', '20', '22', '17'],\n",
+       "       ['Tue', '11', '18', '21', '18'],\n",
+       "       ['Wed', '15', '21', '20', '19'],\n",
+       "       ['Thu', '11', '20', '22', '21'],\n",
+       "       ['Fri', '18', '17', '23', '22'],\n",
+       "       ['Sat', '12', '22', '20', '18'],\n",
+       "       ['Sun', '13', '15', '19', '16'],\n",
+       "       ['Avg', '12', '15', '13', '11']], dtype='<U11')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.append(a, [['Avg', 12, 15, 13, 11]], 0)"
    ]
   },
   {
@@ -1018,7 +1068,9 @@
    "cell_type": "code",
    "execution_count": 60,
    "id": "8b5a6cb3",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1095,7 +1147,9 @@
    "cell_type": "code",
    "execution_count": 64,
    "id": "f46fc0db",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1164,7 +1218,9 @@
    "cell_type": "code",
    "execution_count": 65,
    "id": "ffa43ac1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1371,7 +1427,9 @@
    "cell_type": "code",
    "execution_count": 79,
    "id": "889968a5",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1464,7 +1522,9 @@
    "cell_type": "code",
    "execution_count": 87,
    "id": "bf0fd9fc",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1485,7 +1545,9 @@
    "cell_type": "code",
    "execution_count": 78,
    "id": "501187fe",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "ename": "TypeError",
@@ -1699,7 +1761,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "ab6e0a9d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2225,7 +2289,7 @@
    "hash": "a80b47fb9020a6800d3f0ae0645d2a88d275a1afc6d252ce6196542067670cd0"
   },
   "kernelspec": {
-   "display_name": "problem-solving",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
