--- a/the_python_tutorial.ipynb
+++ b/the_python_tutorial.ipynb
@@ -76,7 +76,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "f4b8a7e1",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -474,7 +476,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "ae81bd7d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -513,7 +517,9 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "39d33fd2",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "TypeError",
@@ -679,6 +685,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "593249c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "43\n",
+      "43\n"
+     ]
+    }
+   ],
+   "source": [
+    "global what\n",
+    "# any variable created here is global so no need of 'global' keyword here\n",
+    "what = 55\n",
+    "\n",
+    "def pr():\n",
+    "    # here what is global due to the below line\n",
+    "    global what\n",
+    "    what = 43\n",
+    "    print(what)\n",
+    "\n",
+    "pr()\n",
+    "print(what)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e7f1ec92",
    "metadata": {},
@@ -705,7 +741,9 @@
    "cell_type": "code",
    "execution_count": 48,
    "id": "bd20442a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -811,7 +849,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "c332812e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -951,7 +991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
